; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_geoip1.c_geoip_set_continent_by_geoid.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_geoip1.c_geoip_set_continent_by_geoid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32)* @geoip_set_continent_by_geoid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @geoip_set_continent_by_geoid(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  store i8* null, i8** %7, align 8
  %10 = load i8*, i8** %4, align 8
  store i8* %10, i8** %8, align 8
  store i32 0, i32* %9, align 4
  %11 = call i32 (...) @is_geoip_resource()
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  br label %27

14:                                               ; preds = %3
  %15 = load i8*, i8** %8, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @geoip_get_geoid(i8* %15, i32 %16)
  store i32 %17, i32* %9, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %14
  br label %23

20:                                               ; preds = %14
  %21 = load i32, i32* %9, align 4
  %22 = call i8* @GeoIP_continent_by_id(i32 %21)
  store i8* %22, i8** %7, align 8
  br label %23

23:                                               ; preds = %20, %19
  %24 = load i8*, i8** %7, align 8
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @geoip_set_continent(i8* %24, i8* %25)
  br label %27

27:                                               ; preds = %23, %13
  ret void
}

declare dso_local i32 @is_geoip_resource(...) #1

declare dso_local i32 @geoip_get_geoid(i8*, i32) #1

declare dso_local i8* @GeoIP_continent_by_id(i32) #1

declare dso_local i32 @geoip_set_continent(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
